--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,9 @@ h1, h2, h3, h4, h5, h6{
     width: auto;
     object-fit: fill;
 }
-
+.nav-menu{
+    margin-right: 5%;
+}
 .nav-menu ul {
     display: flex;
     gap: 35px;
@@ -94,6 +96,56 @@ h1, h2, h3, h4, h5, h6{
     text-align: center;
     color: #333333;
 }
+/* == Dropdown == */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Botón principal */
+.dropbtn {
+    padding: 10px 15px;
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+/* Contenido desplegable */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333333;
+    min-width: 180px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 12px rgba(0,0,0,0.3);
+    z-index: 10;
+}
+
+/* Links dentro del dropdown */
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    transition: 0.2s;
+}
+
+/* Hover dentro del dropdown */
+.dropdown-content a:hover {
+    background-color: #222;
+}
+
+/* Mostrar dropdown al pasar el mouse */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Opcional: cambiar color del botón cuando se despliega */
+.dropdown:hover .dropbtn {
+    color: #aaaaaa;
+}
+
 /*== Footer ==*/
 footer {
     padding: 20px 0;
