--- a/css/styles.css
+++ b/css/styles.css
@@ -320,3 +320,70 @@ footer {
 
     .section-header { width: auto; flex: 0 0 auto; }
 }
+
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 25px;
+  padding: 20px;
+}
+
+.project-card {
+  background: #1e1e1e;
+  border-radius: 16px;
+  padding: 15px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  transition: transform 0.2s;
+}
+
+.project-card:hover {
+  transform: translateY(-6px);
+}
+
+/* Carrusel */
+.carousel {
+  width: 100%;
+  height: 180px;
+  border-radius: 12px;
+  background-size: cover;
+  background-position: center;
+  transition: opacity 0.5s ease-in-out;
+}
+
+/* Textos y botón */
+.project-card h3 {
+  margin: 0;
+  font-size: 1.3em;
+  color: whitesmoke;
+}
+.project-card h5{
+    margin: 0%;
+}
+
+.project-card p {
+  color: whitesmoke;
+  font-size: 0.95em;
+  margin: 0%;
+}
+
+.btn {
+  margin-top: auto;
+  padding: 10px 15px;
+  background: whitesmoke;
+  color: #333333;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 10px;
+  transition: background 0.2s;
+}
+
+.btn:hover {
+  background: #333333;
+  color: whitesmoke;
+  text-decoration: underline;
+}
+
