--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ h1, h2, h3, h4, h5, h6{
     align-items: center;
     justify-content: space-between;
     padding: 0;
-    position: relative;
+    position: sticky;
     top: 0;
     z-index: 100;
     background-color: white;
